--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
     <string name="app_name">ApiApp</string>
+    //TabLayoutのタイトル
     <string name="tab_title_api">新着順</string>
     <string name="tab_title_favorite">お気に入り</string>
+    //API通信関連
+    <string name="base_url">https://webservice.recruit.co.jp/hotpepper/gourment/v1/</string>
+    <string name="api_key">f437c7e2341c1452</string>
+    <string name="api_keyword">ランチ</string>
+
 </resources>
